<resources>
    <string name="app_name">Blood Share</string>
    <string name="main_user">Username</string>
    <string name="main_pass">Password</string>
    <string name="btn_main_login"><b>LOGIN</b></string>
    <string name="btn_main_fb"><b>CONNECT WITH FACEBOOK</b></string>
    <string name="txt_main_or"><b>OR</b></string>
    <string name="txt_main_acc">doesnt have account?</string>
    <string name="txt_main_reg"><b>Register</b></string>

    <string name="user_reg">Username</string>
    <string name="email_reg">Email</string>
    <string name="phone_reg">Phone</string>
    <string name="male_reg">Male</string>
    <string name="female_reg">Female</string>
    <string name="pass_reg">Password</string>
    <string name="blood_reg">Blood Type       </string>
    <string name="resh_reg">Reshus</string>
    <string name="repass_reg">Retype Password</string>
    <string name="personal_reg">Personal</string>
    <string name="organ_reg">Organization</string>
    <string name="job_reg">Job</string>
    <string name="home_reg">Home Address</string>
    <string name="loc_reg">Default Location</string>
    <string name="txt_reg">Register</string>
    <string name="terms_reg">Agree with Terms and Condition</string>
    <string name="almost">Verify</string>

    <string name="reg_pilihdarah">Golongan Darah :</string>
    <string name="reg_jangakosongdarah">Pilih Dulu Golongan Darahnya! :</string>
    <string-array name="gol_dar">
        <item name="">Blood Type</item>
        <item name="A">A</item>
        <item name="B">B</item>
        <item name="O">O</item>
        <item name="AB">AB</item>
    </string-array>

    <string-array name="reshus">
        <item name="">Reshus</item>
        <item name="Positive">Positive</item>
        <item name="Negative">Negative</item>
    </string-array>

    <string-array name="job">
        <item name="">Job</item>
        <item name="Pelajar">Pelajar</item>
        <item name="Wiraswasta">Wiraswasta</item>
        <item name="PNS">PNS</item>
        <item name="Lainnya">Lainnya</item>
    </string-array>

    <string name="Almost">Almost There</string>
    <string name="TextAlmost">Thank you for Registering with us. One More\nStep, you need to Check your Email\nto Active your Account</string>

    <string name="ver_txt_acc">Verify your Account</string>
    <string name="ver_txt_ver">We have send verification code to your email</string>
    <string name="ver_txt_enter">enter verification code here...</string>
    <string name="ver_txt_code">"doesn't get the code ? "</string>
    <string name="ver_txt_resend">Resend</string>

    <string name="NamaSendiri">Ari Sumardi</string>
    <string name="BloodyTypeSendiri">Blood type : A</string>

    <string name="home_blood_give">87</string>
    <string name="home_blood_received">103</string>
    <string name="home_blood_thanks">177</string>
    <string name="home_title_blood_give">Blood Give</string>
    <string name="home_title_blood_received">Blood Received</string>
    <string name="home_title_blood_thanks">Thanks</string>
    <string name="home_title_search_donor">Search Donor</string>
    <string name="home_title_blood_needed">Blood Needed</string>
    <string name="home_title_near">Search donor near you</string>
    <string name="home_needed">3 User need blood</string>>
    <string name="home_btn_msg">Message</string>>
    <string name="home_donor_history">Donor History</string>
    <string name="home_new_msg">4 New Messages</string>
    <string name="home_give_received">3 Gives, 1 Received</string>


</resources>
