<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_header">

        <ImageButton
            android:id="@+id/btn_back_reg"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/back_header"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/ic_header_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_reg"
            android:textSize="25dp"
            android:textColor="@color/txt_header_reg"
            android:layout_marginTop="7dp"
            android:layout_marginStart="15dp"
            android:layout_toRightOf="@+id/btn_back_reg" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/profile_circle" />

        <EditText
            android:id="@+id/input_user_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_reg"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/input_email_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_reg"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/input_user_reg"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/input_phone_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_reg"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/input_email_reg"
            android:inputType="text|number" />

        <RadioButton
            android:id="@+id/radio_male_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/male_reg"
            android:layout_marginStart="30dp"
            android:layout_below="@id/input_phone_reg" />

        <RadioButton
            android:id="@+id/radio_female_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/female_reg"
            android:layout_marginStart="100dp"
            android:layout_below="@id/input_phone_reg"
            android:layout_toRightOf="@id/radio_male_reg" />

        <EditText
            android:id="@+id/spinner_blood_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/blood_reg"
            android:drawableEnd="@drawable/ic_register_dropdown"
            android:layout_marginStart="20dp"
            android:layout_below="@id/radio_male_reg" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/resh_reg"
            android:drawableEnd="@drawable/ic_register_dropdown"
            android:layout_below="@id/radio_male_reg"
            android:layout_toRightOf="@id/spinner_blood_reg"
            android:layout_marginStart="30dp" />

        <EditText
            android:id="@+id/input_pass_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass_reg"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/spinner_blood_reg" />

        <EditText
            android:id="@+id/input_repass_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repass_reg"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/input_pass_reg" />

        <RadioButton
            android:id="@+id/radio_person_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/personal_reg"
            android:layout_marginStart="30dp"
            android:layout_below="@+id/input_repass_reg" />

        <RadioButton
            android:id="@+id/radio_organ_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/organ_reg"
            android:layout_marginStart="80dp"
            android:layout_below="@+id/input_repass_reg"
            android:layout_toRightOf="@id/radio_person_reg" />

        <EditText
            android:id="@+id/spinner_job_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/job_reg"
            android:drawableEnd="@drawable/ic_register_dropdown"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/radio_person_reg" />

        <EditText
            android:id="@+id/input_address_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/home_reg"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/spinner_job_reg" />

        <EditText
            android:id="@+id/spinner_loc_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loc_reg"
            android:drawableEnd="@drawable/ic_blood_needed_location"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/input_address_reg" />

        <CheckBox
            android:id="@+id/cb_term_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/terms_reg"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/spinner_loc_reg" />

        <Button
            android:id="@+id/BtnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_reg"
            android:background="@drawable/main_btn"
            android:textColor="@color/txt_btn_reg"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_below="@id/cb_term_reg" />
    </RelativeLayout>

</RelativeLayout>