<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AquaDanon"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp">

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_welcome_logo" />
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_user"
            android:textColorHint="@color/EditextBlue"
            android:backgroundTint="@color/EditextBlue"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@+id/Logo"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_pass"
            android:textColorHint="@color/EditextBlue"
            android:backgroundTint="@color/EditextBlue"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@+id/username" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_main_login"
            android:background="@drawable/main_btn"
            android:textColor="@color/EditextBlue"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@+id/password" />

        <TextView
            android:id="@+id/or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_main_or"
            android:textColor="@color/EditextBlue"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@+id/btnlogin" />

        <Button
            android:id="@+id/main_btn_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_welcome_fb_login"
            android:text="@string/btn_main_fb"
            android:textColor="@color/EditextBlue"
            android:background="@drawable/main_btn"
            android:paddingStart="90dp"
            android:paddingEnd="90dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@+id/or" />

        <TextView
            android:id="@+id/txt_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_main_acc"
            android:textColor="@color/EditextBlue"
            android:layout_below="@+id/main_btn_fb"
            android:layout_marginStart="90dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/textregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_main_reg"
            android:textStyle="bold"
            android:textColor="@color/EditextBlue"
            android:layout_below="@+id/main_btn_fb"
            android:layout_toRightOf="@id/txt_acc"
            android:layout_toEndOf="@id/txt_acc"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>