<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Almost">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/AquaDanon"
        android:paddingTop="130dp">

        <TextView
            android:id="@+id/txt_view_almost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Almost"
            android:textSize="30dp"
            android:gravity="center"
            android:textColor="@color/EditextBlue" />

        <TextView
            android:id="@+id/txt_view_hampir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextAlmost"
            android:gravity="center"
            android:textColor="@color/EditextBlue"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/txt_view_almost" />

        <Button
            android:id="@+id/al_btn_al"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/almost"
            android:textColor="@color/EditextBlue"
            android:background="@drawable/main_btn"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/txt_view_hampir" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>